--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "gunzip-file": "^0.1.1",
+    "https": "^1.0.0",
     "line-by-line": "^0.1.6",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
@@ -21,6 +23,7 @@
     "readline": "^1.3.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "util": "^0.12.3"
   }
 }
