--- a/package.json
+++ b/package.json
@@ -18,12 +18,9 @@
     "line-by-line": "^0.1.6",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
-    "node-tsv-json": "^0.2.1",
-    "os": "^0.1.1",
     "readline": "^1.3.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
-    "sequelize": "^6.3.5",
-    "util": "^0.12.3"
+    "sequelize": "^6.3.5"
   }
 }
