--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "line-by-line": "^0.1.6",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
+    "node-cron": "^2.0.3",
     "readline": "^1.3.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
